--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
     "express": "^4.18.2",
+    "firebase": "^10.12.2",
     "ng-fallimg": "^0.0.1",
+    "ng-recaptcha": "^13.2.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.1",
     "tslib": "^2.3.0",
