--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
-    "ng-fallimg": "^0.0.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.1",
     "tslib": "^2.3.0",
