--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,11 @@
               }
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.scss"
+
             ],
             "scripts": [],
             "server": "src/main.server.ts",
