--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "firebase": "^10.12.2",
     "ng-fallimg": "^0.0.1",
     "ng-recaptcha": "^13.2.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.1",
     "tslib": "^2.3.0",
