--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "@ionic/angular": "^8.2.2",
     "express": "^4.18.2",
     "firebase": "^10.12.2",
     "ng-fallimg": "^0.0.1",
