--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
     "@ionic/angular": "^8.2.2",
+    "dompurify": "^3.1.6",
     "express": "^4.18.2",
     "firebase": "^10.12.2",
     "ng-fallimg": "^0.0.1",
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
